# ChronoSDF-Contact

./: .gitignore  README.md
chrono/: AGENTS.md  BUILD_README.md  CMakeLists.txt  README.md
chrono/cmake/: chrono-config.cmake.in
chrono/src/: CMakeLists.txt
chrono/src/chrono/: CMakeLists.txt
chrono/src/chrono/collision/: ChCollisionShape.cpp  ChCollisionShape.h  ChCollisionShapeSDF.cpp  ChCollisionShapeSDF.h  ChCollisionShapes.h
chrono/src/chrono/collision/bullet/: ChCollisionModelBullet.cpp
chrono/src/chrono/collision/sdf/: ChNanoVDBLevelSet.cpp  ChNanoVDBLevelSet.h  ChSDFBrickPair.cpp  ChSDFBrickPair.h  ChSDFContactPair.cpp  ChSDFContactPair.h  ChSDFContactPatch.cpp  ChSDFContactPatch.h  ChSDFContactRegion.cpp  ChSDFContactRegion.h  ChSDFContactSurface.cpp  ChSDFContactSurface.h  ChSDFContactWrench.cpp  ChSDFContactWrench.h  ChSDFPFCEvaluator.cpp  ChSDFPFCEvaluator.h  ChSDFPatchCandidate.cpp  ChSDFPatchCandidate.h  ChSDFPatchConsistency.cpp  ChSDFPatchConsistency.h  ChSDFPotentialCalibration.cpp  ChSDFPotentialCalibration.h  ChSDFPotentialField.cpp  ChSDFPotentialField.h  ChSDFShapePair.cpp  ChSDFShapePair.h  ChSDFSheetRepresentation.cpp  ChSDFSheetRepresentation.h  ChSDFVolumeContactEvaluator.cpp  ChSDFVolumeContactEvaluator.h
chrono/template_project/: CMakeLists.txt  my_example.cpp
docs/: sdf_pfc_equivalent_design.md  supplement4_dual_representation_mapping.md  supplement5_step6_v2_mapping.md  supplement6_patch_bridge_mapping.md
paper/: experiment_execution_checklist.md  sdf_pressure_field_contact_draft.aux  sdf_pressure_field_contact_draft.fdb_latexmk  sdf_pressure_field_contact_draft.fls  sdf_pressure_field_contact_draft.out  sdf_pressure_field_contact_draft.tex  sdf_pressure_field_contact_draft.xdv
paper/results/benchmark_box_contact/: README.md  benchmark_records.csv  benchmark_summary.csv  centered_area_modes.csv  curved_sheet_records.csv  curved_sheet_summary.csv  patch_area_diagnostics.csv
paper/sections/: 00_abstract.tex  01_introduction.tex  02_related_work.tex  03_problem_formulation.tex  04_contact_model.tex  05_numerical_algorithm.tex  06_benchmark_design.tex  07_results_discussion.tex  08_limitations.tex  09_conclusion.tex  10_references.tex
tools/mesh_to_vdb_nvdb/: CMakeLists.txt  README.md
tools/mesh_to_vdb_nvdb/src/: MeshIO.cpp  MeshIO.h  main.cpp
tools/nvdb_probe/: CMakeLists.txt  README.md
tools/nvdb_probe/src/: main.cpp
tools/sdf_contact_benchmarks/: CMakeLists.txt  README.md
tools/sdf_contact_benchmarks/src/: main.cpp
